Add favicon and new project in portfolio

--- a/aboutme.html
+++ b/aboutme.html
@@ -17,34 +17,23 @@
 			crossorigin="anonymous"
 		/>
 		<link rel="manifest" href="manifest.json" />
+		<link rel="shortcut icon" href="/favicon.ico?v=2" type="image/x-icon" />
 		<link rel="stylesheet" href="css/main.css" />
 		<title>O mnie</title>
 	</head>
 
-	<body
-		style="background-image: none; background-color: var(--background_dark-clr);"
-	>
+	<body style="background-image: none; background-color: var(--background_dark-clr);">
 		<!-- MENU -->
 		<div class="hamburger-menu"><div class="hamburger-menu__bar"></div></div>
 		<nav class="menu">
 			<div class="menu__header">
-				<h2 class="header__my-name">
-					<span class="header__my-name--green">Krzysztof</span>Pawłowski
-				</h2>
+				<h2 class="header__my-name"><span class="header__my-name--green">Krzysztof</span>Pawłowski</h2>
 			</div>
 			<ul class="menu__list">
-				<li class="list__item">
-					<a href="index.html" rel="noopener">strona główna</a>
-				</li>
-				<li class="list__item">
-					<a class="highlighted" href="aboutme.html" rel="noopener">o mnie</a>
-				</li>
-				<li class="list__item">
-					<a href="portfolio.html" rel="noopener">portfolio</a>
-				</li>
-				<li class="list__item">
-					<a href="contact.html" rel="noopener">kontakt</a>
-				</li>
+				<li class="list__item"><a href="index.html" rel="noopener">strona główna</a></li>
+				<li class="list__item"><a class="highlighted" href="aboutme.html" rel="noopener">o mnie</a></li>
+				<li class="list__item"><a href="portfolio.html" rel="noopener">portfolio</a></li>
+				<li class="list__item"><a href="contact.html" rel="noopener">kontakt</a></li>
 			</ul>
 		</nav>
 
@@ -53,17 +42,11 @@
 			<header class="header-aboutme">
 				<h2 class="header-aboutme__title">o mnie</h2>
 				<h3 class="header-aboutme__subtitle">Parę słów o sobie...</h3>
-				<img
-					src="./img/ja.jpg"
-					alt="photo of Krzysztof Pawłowski"
-					class="header-aboutme__my-photo"
-				/>
+				<img src="./img/ja.jpg" alt="photo of Krzysztof Pawłowski" class="header-aboutme__my-photo" />
 				<p class="header-aboutme__description">
-					Z wykształcenia jestem informatykiem, z&nbsp;zawodu operatorem
-					DTP/grafikiem. Przez ostatnie kilkanaście lat pracowałem w&nbsp;kilku
-					wydawnictwach. Obecnie w&nbsp;ramach nauki i&nbsp;praktyki zajmuję się
-					tworzeniem stron internetowych i&nbsp;programowaniem
-					w&nbsp;JavaScript.
+					Z wykształcenia jestem informatykiem, z&nbsp;zawodu operatorem DTP/grafikiem. Przez ostatnie
+					kilkanaście lat pracowałem w&nbsp;kilku wydawnictwach. Obecnie w&nbsp;ramach nauki i&nbsp;praktyki
+					zajmuję się tworzeniem stron internetowych i&nbsp;programowaniem w&nbsp;JavaScript.
 				</p>
 			</header>
 
@@ -77,21 +60,16 @@
 
 					<div class="gray-box--green-border-right">
 						<h4 class="date">październik 1995 r. – lipiec 2001 r.</h4>
-						<h5 class="description--green">
-							Politechnika Szczecińska<br />Wydział Informatyki
-						</h5>
+						<h5 class="description--green">Politechnika Szczecińska<br />Wydział Informatyki</h5>
 						<p class="description">
-							Kierunek:<br /><strong>informatyka</strong
-							><br /><br />Specjalizacja: <br /><strong
+							Kierunek:<br /><strong>informatyka</strong><br /><br />Specjalizacja: <br /><strong
 								>techniki multimedialne</strong
 							><br /><br />Tytuł:<br /><strong>magister inżynier</strong>
 						</p>
 					</div>
 					<div class="gray-box--green-border-left">
 						<h4 class="date">wrzesień 1991 r. – maj 1995 r.</h4>
-						<h5 class="description--green">
-							Liceum im. Mieszka I w&nbsp;Świnoujściu
-						</h5>
+						<h5 class="description--green">Liceum im. Mieszka I w&nbsp;Świnoujściu</h5>
 						<p class="description">Profil:<br /><strong>ogólny</strong></p>
 					</div>
 				</section>
@@ -107,23 +85,17 @@
 						<h4 class="date">listopad 2018 r. –</h4>
 						<h5 class="description--green">Wsparcie prac magazynowych</h5>
 						<p class="description"><strong>DPD Polska Sp. z o. o.</strong></p>
-						<p class="description2">
-							świadczenie usług konfekcjonowania i&nbsp;magazynowania
-						</p>
+						<p class="description2">świadczenie usług konfekcjonowania i&nbsp;magazynowania</p>
 					</div>
 
 					<div class="gray-box--green-border-right">
 						<h4 class="date">* kwiecień 2004 r. –</h4>
 						<h5 class="description--green">Operator DTP</h5>
-						<p class="description">
-							<strong>Invest Company Corporation</strong>
-						</p>
+						<p class="description"><strong>Invest Company Corporation</strong></p>
 						<p class="description2">
-							skład i&nbsp;łamanie czasopisma „Piłka Nożna”<br /><br />wysyłka
-							materiałów do drukarni<br /><br />tworzenie infografik<br /><br />obróbka
-							zdjęć<br /><br />tworzenie okładki (w&nbsp;zastępstwie)<br /><br />*
-							od października praca na 1/4 etatu (tylko w&nbsp;kolejne
-							niedziele)
+							skład i&nbsp;łamanie czasopisma „Piłka Nożna”<br /><br />wysyłka materiałów do drukarni<br /><br />tworzenie
+							infografik<br /><br />obróbka zdjęć<br /><br />tworzenie okładki (w&nbsp;zastępstwie)<br /><br />*
+							od października praca na 1/4 etatu (tylko w&nbsp;kolejne niedziele)
 						</p>
 					</div>
 
@@ -141,8 +113,8 @@
 						<h5 class="description--green">Operator DTP</h5>
 						<p class="description"><strong>Wydawnictwo Vision Media</strong></p>
 						<p class="description2">
-							skład i&nbsp;łamanie czasopisma „Technologie i&nbsp;przemysł”<br /><br />wysyłka
-							materiałów drukarni
+							skład i&nbsp;łamanie czasopisma „Technologie i&nbsp;przemysł”<br /><br />wysyłka materiałów
+							drukarni
 						</p>
 					</div>
 
@@ -151,8 +123,7 @@
 						<h5 class="description--green">Grafik komputerowy</h5>
 						<p class="description"><strong>Wydawnictwo PAIP</strong></p>
 						<p class="description2">
-							skład i&nbsp;łamanie czasopisma<br /><br />wysyłka materiałów do
-							drukarni
+							skład i&nbsp;łamanie czasopisma<br /><br />wysyłka materiałów do drukarni
 						</p>
 					</div>
 
@@ -163,9 +134,8 @@
 							<strong>Urząd miejski<br />w Świnoujściu</strong>
 						</p>
 						<p class="description2">
-							konfiguracja i&nbsp;pomoc techniczna urzędnikom w&nbsp;zakresie
-							instalacji programów i&nbsp;obsługi systemu Windows<br /><br />instalacja
-							i&nbsp;wymiana kabli sieciowych
+							konfiguracja i&nbsp;pomoc techniczna urzędnikom w&nbsp;zakresie instalacji programów
+							i&nbsp;obsługi systemu Windows<br /><br />instalacja i&nbsp;wymiana kabli sieciowych
 						</p>
 					</div>
 
@@ -176,9 +146,8 @@
 							<strong>Urząd miejski<br />w Świnoujściu</strong>
 						</p>
 						<p class="description2">
-							konfiguracja i&nbsp;pomoc techniczna urzędnikom w&nbsp;zakresie
-							instalacji programów i&nbsp;obsługi systemu Windows<br /><br />instalacja
-							i wymiana kabli sieciowych
+							konfiguracja i&nbsp;pomoc techniczna urzędnikom w&nbsp;zakresie instalacji programów
+							i&nbsp;obsługi systemu Windows<br /><br />instalacja i wymiana kabli sieciowych
 						</p>
 					</div>
 				</section>
@@ -263,8 +232,7 @@
 					<div class="gray-box--green-border-right">
 						<h4 class="date">22 listopada 2016 r.</h4>
 						<h5 class="description--green">
-							Certyfikat internetowych rewolucji<br />(kurs marketingu
-							internetowego)
+							Certyfikat internetowych rewolucji<br />(kurs marketingu internetowego)
 						</h5>
 						<p class="description"><strong>Google</strong></p>
 					</div>
@@ -279,12 +247,8 @@
 
 					<div class="gray-box--green-border-right">
 						<h4 class="date">październik 2001 r.</h4>
-						<h5 class="description--green">
-							Kurs podstawowy<br />na Operatora DTP
-						</h5>
-						<h5 class="description--green">
-							Kurs zaawansowany<br />na Operatora DTP
-						</h5>
+						<h5 class="description--green">Kurs podstawowy<br />na Operatora DTP</h5>
+						<h5 class="description--green">Kurs zaawansowany<br />na Operatora DTP</h5>
 						<p class="description">
 							<strong>Ośrodek szkoleniowy<br />Publishing Institute</strong>
 						</p>
@@ -294,25 +258,20 @@
 						<h3 class="udemy-title">kursy na platformie udemy</h3>
 						<p class="description2">ES6 JavaScript Reloaded, Javascript ES6!</p>
 						<p class="description2">A Complete Reference Guide to Javascript</p>
-						<p class="description2">
-							Code Your First Game: Arcade Classic in JavaScript On Canvas
-						</p>
+						<p class="description2">Code Your First Game: Arcade Classic in JavaScript On Canvas</p>
 						<p class="description2">Modern JavaScript From The Beginning</p>
-						<p class="description2">
-							Materialize CSS From Scratch With 5 Projects
-						</p>
+						<p class="description2">Materialize CSS From Scratch With 5 Projects</p>
 						<p class="description2">React for Absolute Beginners</p>
 						<p class="description2">React Front To Back</p>
 					</div>
 
 					<div class="youtube">
 						<h5 class="description--green">
-							Ponadto dziesiątki kursów na youtube od następujących
-							użytkowników:
+							Ponadto dziesiątki kursów na youtube od następujących użytkowników:
 						</h5>
 						<p class="description2">
-							Traversy Media, The Net Ninja, Fun Fun Function, DevTips,
-							techsith, Samuraj Programowania i wiele innych...
+							Traversy Media, The Net Ninja, Fun Fun Function, DevTips, techsith, Samuraj Programowania i
+							wiele innych...
 						</p>
 					</div>
 				</section>
@@ -340,9 +299,7 @@
 		</div>
 
 		<!-- FOOTER -->
-		<footer class="footer">
-			<span class="footer__text">&copy; Krzysztof Pawłowski 2018</span>
-		</footer>
+		<footer class="footer"><span class="footer__text">&copy; Krzysztof Pawłowski 2018</span></footer>
 
 		<script src="js/variables.js"></script>
 		<script src="js/menu_classes.js"></script>
