--- a/portfolio.html
+++ b/portfolio.html
@@ -17,11 +17,12 @@
 			crossorigin="anonymous"
 		/>
 		<link rel="manifest" href="manifest.json" />
+		<link rel="shortcut icon" href="/favicon.ico?v=2" type="image/x-icon" />
 		<link rel="stylesheet" href="css/main.css" />
 		<title>O mnie</title>
 	</head>
 
-	<body style="background-image: none; background-color: var(--background_dark-clr);">
+	<body style="background-image: none; background-color: white">
 		<!-- MENU -->
 		<div class="hamburger-menu"><div class="hamburger-menu__bar"></div></div>
 		<nav class="menu">
@@ -349,7 +350,26 @@
 						/>
 						<h3 class="green-box__title">TODO React</h3>
 						<p class="green-box__text">
-							Aplikacja TODO zrobiona za pomocą biblioteki React z użyciem Context API
+							Aplikacja TODO zrobiona za pomocą biblioteki React z&nbsp;użyciem Context API
+						</p>
+					</a>
+				</figure>
+
+				<figure class="green-box">
+					<a
+						class="green-box__link"
+						href="https://kp1976.github.io/paper-scissors-rock/"
+						target="_blank"
+						rel="noopener"
+					>
+						<img
+							class="green-box__example-img"
+							src="img/Portfolio/papier_nozyczki_kamien.jpg"
+							alt="obraz gry papier, nożyczki, kamień"
+						/>
+						<h3 class="green-box__title">Papier, nożyczki, kamień</h3>
+						<p class="green-box__text">
+							Popularna gra z&nbsp;komputerem w&nbsp;papier, nożyczki i&nbsp;kamień.
 						</p>
 					</a>
 				</figure>
