--- a/index.html
+++ b/index.html
@@ -28,22 +28,38 @@
 			<div class="hamburger-menu"><div class="hamburger-menu__bar"></div></div>
 			<nav class="menu">
 				<div class="menu__header">
-					<h2 class="header__my-name"><span class="header__my-name--green">Krzysztof</span> Pawłowski</h2>
+					<h2 class="header__my-name">
+						<span class="header__my-name--green">Krzysztof</span> Pawłowski
+					</h2>
 				</div>
 				<ul class="menu__list">
 					<li class="list__item">
-						<a class="highlighted" href="index.html" rel="noopener">strona główna</a>
+						<a class="highlighted" href="index.html" rel="noopener"
+							>strona główna</a
+						>
 					</li>
-					<li class="list__item"><a href="aboutme.html" rel="noopener">o mnie</a></li>
-					<li class="list__item"><a href="portfolio.html" rel="noopener">portfolio</a></li>
-					<li class="list__item"><a href="contact.html" rel="noopener">kontakt</a></li>
+					<li class="list__item">
+						<a href="aboutme.html" rel="noopener">o mnie</a>
+					</li>
+					<li class="list__item">
+						<a href="portfolio.html" rel="noopener">portfolio</a>
+					</li>
+					<li class="list__item">
+						<a href="contact.html" rel="noopener">kontakt</a>
+					</li>
 				</ul>
 			</nav>
 
 			<!-- HEADER -->
 			<header class="header">
-				<img src="./img/ja.jpg" alt="photo of Krzysztof Pawłowski" class="header__my-photo" />
-				<h2 class="header__my-name"><span class="header__my-name--green">Krzysztof</span> Pawłowski</h2>
+				<img
+					src="./img/ja.webp"
+					alt="photo of Krzysztof Pawłowski"
+					class="header__my-photo"
+				/>
+				<h2 class="header__my-name">
+					<span class="header__my-name--green">Krzysztof</span> Pawłowski
+				</h2>
 				<div class="professions">
 					<h2 class="professions__profession">operator DTP</h2>
 					<h2 class="professions__profession">grafik komputerowy</h2>
