--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			<!-- HEADER -->
 			<header class="header">
 				<img
-					src="./img/ja.webp"
+					src="./img/ja.jpg"
 					alt="photo of Krzysztof Pawłowski"
 					class="header__my-photo"
 				/>
